--- a/typescript/package.json
+++ b/typescript/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "application": "ts-node src/com/murex/Application.ts",
+    "application": "ts-node src/Application.ts",
     "test:ci": "jest --ci"
   },
   "husky": {
